--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family: 'Alumni Sans Pinstripe', sans-serif;
+    font-family: 'Inter', sans-serif;
     background-color: #e9ecef;
     padding: 50px 10%;
 }
@@ -12,8 +12,7 @@ header {
 
 header h1{
     margin: 0;
-    font-size: 80px;
-    font-weight: 900;
+    font-size: 40px;
     margin-right: auto ;
 }
 
@@ -28,11 +27,11 @@ h1, p {
 }
 
 .portfolio {
-    font-size: 30px;
+    font-size: 25px;
 }
 
 .links {
-    font-size: 25px;
+    font-size: 18px;
     letter-spacing: 0.05em;
     color: black;
     margin-left: auto;
@@ -42,14 +41,13 @@ h1, p {
 .links a {
     color: black;
     text-decoration: none;
-    font-weight: 700;
     margin-left: 30px;
 
 }
 
 .intro p {
-  font-size: 30px;
-  line-height: 0.03em;
+  font-size: 25px;
+  line-height: 1em;
 }
 
 .works {
@@ -247,7 +245,7 @@ a.bsp-controls:hover {
 }
 
 .social {
-  font-size: 30px;
+  font-size: 20px;
   line-height: 1.4em;
 }
 
